# Vergleichsprogramm

./: .gitignore  LICENSE  Readme.md
C++/Berlin_App/: Berlin_App.cpp  Berlin_App.sln  Berlin_App.vcxproj  Data.h  GeoCalc.h  MyBuffer.h  My_Double.h  My_Lines_Iterator.h  Processes.cpp  Processes.h  Processes_Data.cpp  Processes_Data.h  Processes_Read_Old.cpp  Spots.h  Test.cpp  Test.h  sort_din.h  statistic.h
C++/QT6/DatabaseApp/: DatabaseApp.cpp  DatabaseApp.h  DatabaseApp.qrc  DatabaseApp.sln  DatabaseApp.ui  DatabaseApp.vcxproj  main.cpp
C++/from Stream Evolution of C++/ChatGPT/: ChatGPT.cpp  ChatGPT.h  MyAddress.cpp  MyAddress.h  MyData.cpp  MyData.h  MyLocation.cpp  MyLocation.h  Test.cpp  Test.vcxproj  TestCB.cbproj
C++/from Stream Evolution of C++/ChatGPT/gcc_test/: CMakeLists.txt
C++/from Stream Evolution of C++/Modern C++/: Geodaten.cpp  Geodaten.h  MyAddress.h  MyCheck.h  MyConvert.h  MyData.h  MyFileIterator.h  MyLocation.h  MyProcess.cpp  Test.cpp  (+9 more)
C++/from Stream Evolution of C++/Modern C++/Test_gcc/: CMakeLists.txt
Data/: Lizenzen OpenData Portal.txt  berlin_spots.txt
Data/Thüringen/: License.txt  schluessel-th.txt
Delphi/: Delphi_Implementierungen.groupproj
Delphi/Programm_AnsiString/: Catastre.pas  Delphi_Vergleichsprogramm_AnsiString.dpr  Delphi_Vergleichsprogramm_AnsiString.dproj  Location.pas  MainForm.dfm  MainForm.pas  Prozess.pas
Delphi/Programm_String/: Catastre.pas  Delphi_Vergleichsprogramm_String.dpr  Delphi_Vergleichsprogramm_String.dproj  Location.pas  MainForm.pas  Prozess.pas
Docs/: Auswertung.xlsx  Vergleichsprogramm.docx
